--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <meta charset="UTF-8" />
             <link rel="icon" type="image/svg+xml" href="https://img.icons8.com/arcade/512/apple-music.png" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <meta name="theme-color" content="#313A7D" />
             <link href="/dist/styles.css" rel="stylesheet" />
             <title>Music App</title>
       </head>
