--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
             <link rel="icon" type="image/svg+xml" href="https://img.icons8.com/arcade/512/apple-music.png" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta name="theme-color" content="#313A7D" />
+            <meta name="description" content="MusicByAhmad is your go-to music platform. Listen to Predefined songs," />
+            <meta name="keywords" content="musicbyahmad,naatbyahmad,ahmadkiapp,music app,online music,music streaming" />
             <link href="/dist/styles.css" rel="stylesheet" />
-            <title>Music App</title>
+            <script type="application/ld+json">
+                  {
+                        "@context": "https://schema.org",
+                        "@type": "WebSite",
+                        "name": "MusicByAhmad",
+                        "url": "https://musicbyahmad.vercel.app"
+                  }
+            </script>
+            <title>MusicByAhmad - Listen to Music Online</title>
       </head>
       <body>
             <div id="root"></div>
