Integrate Vercel Analytics for enhanced tracking and update keywords in index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
             <meta name="google-site-verification" content="F595ySKfUheIN2ug2CMFzHeVQNsscpVcx4VcTNMiIrs" />
             <link rel="icon" type="image/svg+xml" href="https://img.icons8.com/arcade/512/apple-music.png" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <meta name="theme-color" content="#313A7D" />
             <meta name="description" content="MusicByAhmad is your go-to music platform. Listen to Predefined songs" />
-            <meta name="keywords" content="musicbyahmad,naatbyahmad,ahmadkiapp,music app,online music,music streaming" />
+            <meta name="keywords" content="musicbyahmad,naatbyahmad,ahmadkiapp,music app,online music,music streaming,gculmusic" />
             <link href="/dist/styles.css" rel="stylesheet" />
             <script type="application/ld+json">
                   {
