--- a/public/offline.html
+++ b/public/offline.html
@@ -16,6 +16,6 @@
             }
       </style>
       <body>
-            <section>I am offline Secction Section</section>
+            <section>I am offline Page</section>
       </body>
 </html>
